# rl_spotifyrecs

./: .gitignore  README.md  app.py  example.js  index.js  package.json  pyproject.toml
src/rl_spotifyrecs/: utils.py
src/rl_spotifyrecs/mind_dataset/: article_data.ipynb  mind_data.ipynb
src/rl_spotifyrecs/simulation/: lstm.py  non_sequential.py  simulation.py
src/rl_spotifyrecs/spotify_agent/: dqn_agent.py
src/rl_spotifyrecs/spotify_data/: data.ipynb  data.py
src/rl_spotifyrecs/spotify_environment/: environment.py
src/rl_spotifyrecs/spotify_example/: multiple_users.py  recommend_mixed_songs.py  recommend_random_songs.py  songs_played.py  spotify_track_check.py  user_playlists.py  user_public_playlists.py  user_top_tracks.py
src/rl_spotifyrecs/tests/: serving_test.py  serving_test_greedy.py
src/rl_spotifyrecs/toy_problem/: toy.ipynb  toy_neil.ipynb  toy_slateq.ipynb
src/rl_spotifyrecs/user_model/: lstm.py  non_sequential_user_model.py  sequential_user_model.py  spotify_cwm.py
